Lab01/y.output
Terminals unused in grammar

    VOID
    DO
    SWITCH
    DEFAULT
    GOTO
    CHAR
    DOUBLE
    CASE
    CONTINUE
    BREAK
    COLON


State 105 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN RPAREN compound_statement

    8 parameter_list: parameter_list COMMA type_specifier ID
    9               | parameter_list COMMA type_specifier
   10               | type_specifier ID
   11               | type_specifier

   12 compound_statement: LCURL statements RCURL
   13                   | LCURL RCURL

   14 var_declaration: type_specifier declaration_list SEMICOLON

   15 type_specifier: INT
   16               | FLOAT

   17 declaration_list: declaration_list COMMA ID
   18                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   19                 | ID
   20                 | ID LTHIRD CONST_INT RTHIRD

   21 statements: statement
   22           | statements statement

   23 statement: var_declaration
   24          | expression_statement
   25          | compound_statement
   26          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   27          | IF LPAREN expression RPAREN statement
   28          | IF LPAREN expression RPAREN statement ELSE statement
   29          | WHILE LPAREN expression RPAREN statement
   30          | PRINTLN LPAREN ID RPAREN SEMICOLON
   31          | RETURN expression SEMICOLON

   32 expression_statement: SEMICOLON
   33                     | expression SEMICOLON

   34 variable: ID
   35         | ID LTHIRD expression RTHIRD

   36 expression: logic_expression
   37           | variable ASSIGNOP logic_expression

   38 logic_expression: rel_expression
   39                 | rel_expression LOGICOP rel_expression

   40 rel_expression: simple_expression
   41               | simple_expression RELOP simple_expression

   42 simple_expression: term
   43                  | simple_expression ADDOP term

   44 term: unary_expression
   45     | term MULOP unary_expression

   46 unary_expression: ADDOP unary_expression
   47                 | NOT unary_expression
   48                 | factor

   49 factor: variable
   50       | ID LPAREN argument_list RPAREN
   51       | LPAREN expression RPAREN
   52       | CONST_INT
   53       | CONST_FLOAT
   54       | variable INCOP
   55       | variable DECOP

   56 argument_list: arguments
   57              | ε

   58 arguments: arguments COMMA logic_expression
   59          | logic_expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258) 27 28
    ELSE (259) 28
    FOR (260) 26
    ID (261) 6 7 8 10 17 18 19 20 30 34 35 50
    LPAREN (262) 6 7 26 27 28 29 30 50 51
    RPAREN (263) 6 7 26 27 28 29 30 50 51
    COMMA (264) 8 9 17 18 58
    LCURL (265) 12 13
    RCURL (266) 12 13
    SEMICOLON (267) 14 30 31 32 33
    INT (268) 15
    FLOAT (269) 16
    LTHIRD (270) 18 20 35
    RTHIRD (271) 18 20 35
    CONST_INT (272) 18 20 52
    CONST_FLOAT (273) 53
    WHILE (274) 29
    PRINTLN (275) 30
    RETURN (276) 31
    ASSIGNOP (277) 37
    LOGICOP (278) 39
    RELOP (279) 41
    ADDOP (280) 43 46
    MULOP (281) 45
    NOT (282) 47
    INCOP (283) 54
    DECOP (284) 55
    VOID (285)
    DO (286)
    SWITCH (287)
    DEFAULT (288)
    GOTO (289)
    CHAR (290)
    DOUBLE (291)
    CASE (292)
    CONTINUE (293)
    BREAK (294)
    COLON (295)
    LOWER_THAN_ELSE (296)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    start (43)
        on left: 1
        on right: 0
    program (44)
        on left: 2 3
        on right: 1 2
    unit (45)
        on left: 4 5
        on right: 2 3
    func_definition (46)
        on left: 6 7
        on right: 5
    parameter_list (47)
        on left: 8 9 10 11
        on right: 6 8 9
    compound_statement (48)
        on left: 12 13
        on right: 6 7 25
    var_declaration (49)
        on left: 14
        on right: 4 23
    type_specifier (50)
        on left: 15 16
        on right: 6 7 8 9 10 11 14
    declaration_list (51)
        on left: 17 18 19 20
        on right: 14 17 18
    statements (52)
        on left: 21 22
        on right: 12 22
    statement (53)
        on left: 23 24 25 26 27 28 29 30 31
        on right: 21 22 26 27 28 29
    expression_statement (54)
        on left: 32 33
        on right: 24 26
    variable (55)
        on left: 34 35
        on right: 37 49 54 55
    expression (56)
        on left: 36 37
        on right: 26 27 28 29 31 33 35 51
    logic_expression (57)
        on left: 38 39
        on right: 36 37 58 59
    rel_expression (58)
        on left: 40 41
        on right: 38 39
    simple_expression (59)
        on left: 42 43
        on right: 40 41 43
    term (60)
        on left: 44 45
        on right: 42 43 45
    unary_expression (61)
        on left: 46 47 48
        on right: 44 45 46 47
    factor (62)
        on left: 49 50 51 52 53 54 55
        on right: 48
    argument_list (63)
        on left: 56 57
        on right: 50
    arguments (64)
        on left: 58 59
        on right: 56 58


State 0

    0 $accept: • start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2

    start            go to state 3
    program          go to state 4
    unit             go to state 5
    func_definition  go to state 6
    var_declaration  go to state 7
    type_specifier   go to state 8


State 1

   15 type_specifier: INT •

    $default  reduce using rule 15 (type_specifier)


State 2

   16 type_specifier: FLOAT •

    $default  reduce using rule 16 (type_specifier)


State 3

    0 $accept: start • $end

    $end  shift, and go to state 9


State 4

    1 start: program •
    2 program: program • unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2

    $default  reduce using rule 1 (start)

    unit             go to state 10
    func_definition  go to state 6
    var_declaration  go to state 7
    type_specifier   go to state 8


State 5

    3 program: unit •

    $default  reduce using rule 3 (program)


State 6

    5 unit: func_definition •

    $default  reduce using rule 5 (unit)


State 7

    4 unit: var_declaration •

    $default  reduce using rule 4 (unit)


State 8

    6 func_definition: type_specifier • ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier • ID LPAREN RPAREN compound_statement
   14 var_declaration: type_specifier • declaration_list SEMICOLON

    ID  shift, and go to state 11

    declaration_list  go to state 12


State 9

    0 $accept: start $end •

    $default  accept


State 10

    2 program: program unit •

    $default  reduce using rule 2 (program)


State 11

    6 func_definition: type_specifier ID • LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID • LPAREN RPAREN compound_statement
   19 declaration_list: ID •
   20                 | ID • LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 13
    LTHIRD  shift, and go to state 14

    $default  reduce using rule 19 (declaration_list)


State 12

   14 var_declaration: type_specifier declaration_list • SEMICOLON
   17 declaration_list: declaration_list • COMMA ID
   18                 | declaration_list • COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 15
    SEMICOLON  shift, and go to state 16


State 13

    6 func_definition: type_specifier ID LPAREN • parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN • RPAREN compound_statement

    RPAREN  shift, and go to state 17
    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2

    parameter_list  go to state 18
    type_specifier  go to state 19


State 14

   20 declaration_list: ID LTHIRD • CONST_INT RTHIRD

    CONST_INT  shift, and go to state 20


State 15

   17 declaration_list: declaration_list COMMA • ID
   18                 | declaration_list COMMA • ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 21


State 16

   14 var_declaration: type_specifier declaration_list SEMICOLON •

    $default  reduce using rule 14 (var_declaration)


State 17

    7 func_definition: type_specifier ID LPAREN RPAREN • compound_statement

    LCURL  shift, and go to state 22

    compound_statement  go to state 23


State 18

    6 func_definition: type_specifier ID LPAREN parameter_list • RPAREN compound_statement
    8 parameter_list: parameter_list • COMMA type_specifier ID
    9               | parameter_list • COMMA type_specifier

    RPAREN  shift, and go to state 24
    COMMA   shift, and go to state 25


State 19

   10 parameter_list: type_specifier • ID
   11               | type_specifier •

    ID  shift, and go to state 26

    $default  reduce using rule 11 (parameter_list)


State 20

   20 declaration_list: ID LTHIRD CONST_INT • RTHIRD

    RTHIRD  shift, and go to state 27


State 21

   17 declaration_list: declaration_list COMMA ID •
   18                 | declaration_list COMMA ID • LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 28

    $default  reduce using rule 17 (declaration_list)


State 22

   12 compound_statement: LCURL • statements RCURL
   13                   | LCURL • RCURL

    IF           shift, and go to state 29
    FOR          shift, and go to state 30
    ID           shift, and go to state 31
    LPAREN       shift, and go to state 32
    LCURL        shift, and go to state 22
    RCURL        shift, and go to state 33
    SEMICOLON    shift, and go to state 34
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    WHILE        shift, and go to state 37
    PRINTLN      shift, and go to state 38
    RETURN       shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41

    compound_statement    go to state 42
    var_declaration       go to state 43
    type_specifier        go to state 44
    statements            go to state 45
    statement             go to state 46
    expression_statement  go to state 47
    variable              go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    factor                go to state 55


State 23

    7 func_definition: type_specifier ID LPAREN RPAREN compound_statement •

    $default  reduce using rule 7 (func_definition)


State 24

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN • compound_statement

    LCURL  shift, and go to state 22

    compound_statement  go to state 56


State 25

    8 parameter_list: parameter_list COMMA • type_specifier ID
    9               | parameter_list COMMA • type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2

    type_specifier  go to state 57


State 26

   10 parameter_list: type_specifier ID •

    $default  reduce using rule 10 (parameter_list)


State 27

   20 declaration_list: ID LTHIRD CONST_INT RTHIRD •

    $default  reduce using rule 20 (declaration_list)


State 28

   18 declaration_list: declaration_list COMMA ID LTHIRD • CONST_INT RTHIRD

    CONST_INT  shift, and go to state 58


State 29

   27 statement: IF • LPAREN expression RPAREN statement
   28          | IF • LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 59


State 30

   26 statement: FOR • LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 60


State 31

   34 variable: ID •
   35         | ID • LTHIRD expression RTHIRD
   50 factor: ID • LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 61
    LTHIRD  shift, and go to state 62

    $default  reduce using rule 34 (variable)


State 32

   51 factor: LPAREN • expression RPAREN

    ID           shift, and go to state 31
    LPAREN       shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41

    variable           go to state 48
    expression         go to state 63
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55


State 33

   13 compound_statement: LCURL RCURL •

    $default  reduce using rule 13 (compound_statement)


State 34

   32 expression_statement: SEMICOLON •

    $default  reduce using rule 32 (expression_statement)


State 35

   52 factor: CONST_INT •

    $default  reduce using rule 52 (factor)


State 36

   53 factor: CONST_FLOAT •

    $default  reduce using rule 53 (factor)


State 37

   29 statement: WHILE • LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 64


State 38

   30 statement: PRINTLN • LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 65


State 39

   31 statement: RETURN • expression SEMICOLON

    ID           shift, and go to state 31
    LPAREN       shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41

    variable           go to state 48
    expression         go to state 66
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55


State 40

   46 unary_expression: ADDOP • unary_expression

    ID           shift, and go to state 31
    LPAREN       shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41

    variable          go to state 67
    unary_expression  go to state 68
    factor            go to state 55


State 41

   47 unary_expression: NOT • unary_expression

    ID           shift, and go to state 31
    LPAREN       shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41

    variable          go to state 67
    unary_expression  go to state 69
    factor            go to state 55


State 42

   25 statement: compound_statement •

    $default  reduce using rule 25 (statement)


State 43

   23 statement: var_declaration •

    $default  reduce using rule 23 (statement)


State 44

   14 var_declaration: type_specifier • declaration_list SEMICOLON

    ID  shift, and go to state 70

    declaration_list  go to state 12


State 45

   12 compound_statement: LCURL statements • RCURL
   22 statements: statements • statement

    IF           shift, and go to state 29
    FOR          shift, and go to state 30
    ID           shift, and go to state 31
    LPAREN       shift, and go to state 32
    LCURL        shift, and go to state 22
    RCURL        shift, and go to state 71
    SEMICOLON    shift, and go to state 34
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    WHILE        shift, and go to state 37
    PRINTLN      shift, and go to state 38
    RETURN       shift, and go to state 39
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41

    compound_statement    go to state 42
    var_declaration       go to state 43
    type_specifier        go to state 44
    statement             go to state 72
    expression_statement  go to state 47
    variable              go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    factor                go to state 55


State 46

   21 statements: statement •

    $default  reduce using rule 21 (statements)


State 47

   24 statement: expression_statement •

    $default  reduce using rule 24 (statement)


State 48

   37 expression: variable • ASSIGNOP logic_expression
   49 factor: variable •
   54       | variable • INCOP
   55       | variable • DECOP

    ASSIGNOP  shift, and go to state 73
    INCOP     shift, and go to state 74
    DECOP     shift, and go to state 75

    $default  reduce using rule 49 (factor)


State 49

   33 expression_statement: expression • SEMICOLON

    SEMICOLON  shift, and go to state 76


State 50

   36 expression: logic_expression •

    $default  reduce using rule 36 (expression)


State 51

   38 logic_expression: rel_expression •
   39                 | rel_expression • LOGICOP rel_expression

    LOGICOP  shift, and go to state 77

    $default  reduce using rule 38 (logic_expression)


State 52

   40 rel_expression: simple_expression •
   41               | simple_expression • RELOP simple_expression
   43 simple_expression: simple_expression • ADDOP term

    RELOP  shift, and go to state 78
    ADDOP  shift, and go to state 79

    $default  reduce using rule 40 (rel_expression)


State 53

   42 simple_expression: term •
   45 term: term • MULOP unary_expression

    MULOP  shift, and go to state 80

    $default  reduce using rule 42 (simple_expression)


State 54

   44 term: unary_expression •

    $default  reduce using rule 44 (term)


State 55

   48 unary_expression: factor •

    $default  reduce using rule 48 (unary_expression)


State 56

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement •

    $default  reduce using rule 6 (func_definition)


State 57

    8 parameter_list: parameter_list COMMA type_specifier • ID
    9               | parameter_list COMMA type_specifier •

    ID  shift, and go to state 81

    $default  reduce using rule 9 (parameter_list)


State 58

   18 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT • RTHIRD

    RTHIRD  shift, and go to state 82


State 59

   27 statement: IF LPAREN • expression RPAREN statement
   28          | IF LPAREN • expression RPAREN statement ELSE statement

    ID           shift, and go to state 31
    LPAREN       shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41

    variable           go to state 48
    expression         go to state 83
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55


State 60

   26 statement: FOR LPAREN • expression_statement expression_statement expression RPAREN statement

    ID           shift, and go to state 31
    LPAREN       shift, and go to state 32
    SEMICOLON    shift, and go to state 34
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41

    expression_statement  go to state 84
    variable              go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    factor                go to state 55


State 61

   50 factor: ID LPAREN • argument_list RPAREN

    ID           shift, and go to state 31
    LPAREN       shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41

    $default  reduce using rule 57 (argument_list)

    variable           go to state 67
    logic_expression   go to state 85
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55
    argument_list      go to state 86
    arguments          go to state 87


State 62

   35 variable: ID LTHIRD • expression RTHIRD

    ID           shift, and go to state 31
    LPAREN       shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41

    variable           go to state 48
    expression         go to state 88
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55


State 63

   51 factor: LPAREN expression • RPAREN

    RPAREN  shift, and go to state 89


State 64

   29 statement: WHILE LPAREN • expression RPAREN statement

    ID           shift, and go to state 31
    LPAREN       shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41

    variable           go to state 48
    expression         go to state 90
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55


State 65

   30 statement: PRINTLN LPAREN • ID RPAREN SEMICOLON

    ID  shift, and go to state 91


State 66

   31 statement: RETURN expression • SEMICOLON

    SEMICOLON  shift, and go to state 92


State 67

   49 factor: variable •
   54       | variable • INCOP
   55       | variable • DECOP

    INCOP  shift, and go to state 74
    DECOP  shift, and go to state 75

    $default  reduce using rule 49 (factor)


State 68

   46 unary_expression: ADDOP unary_expression •

    $default  reduce using rule 46 (unary_expression)


State 69

   47 unary_expression: NOT unary_expression •

    $default  reduce using rule 47 (unary_expression)


State 70

   19 declaration_list: ID •
   20                 | ID • LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 14

    $default  reduce using rule 19 (declaration_list)


State 71

   12 compound_statement: LCURL statements RCURL •

    $default  reduce using rule 12 (compound_statement)


State 72

   22 statements: statements statement •

    $default  reduce using rule 22 (statements)


State 73

   37 expression: variable ASSIGNOP • logic_expression

    ID           shift, and go to state 31
    LPAREN       shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41

    variable           go to state 67
    logic_expression   go to state 93
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55


State 74

   54 factor: variable INCOP •

    $default  reduce using rule 54 (factor)


State 75

   55 factor: variable DECOP •

    $default  reduce using rule 55 (factor)


State 76

   33 expression_statement: expression SEMICOLON •

    $default  reduce using rule 33 (expression_statement)


State 77

   39 logic_expression: rel_expression LOGICOP • rel_expression

    ID           shift, and go to state 31
    LPAREN       shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41

    variable           go to state 67
    rel_expression     go to state 94
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55


State 78

   41 rel_expression: simple_expression RELOP • simple_expression

    ID           shift, and go to state 31
    LPAREN       shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41

    variable           go to state 67
    simple_expression  go to state 95
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55


State 79

   43 simple_expression: simple_expression ADDOP • term

    ID           shift, and go to state 31
    LPAREN       shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41

    variable          go to state 67
    term              go to state 96
    unary_expression  go to state 54
    factor            go to state 55


State 80

   45 term: term MULOP • unary_expression

    ID           shift, and go to state 31
    LPAREN       shift, and go to state 32
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41

    variable          go to state 67
    unary_expression  go to state 97
    factor            go to state 55


State 81

    8 parameter_list: parameter_list COMMA type_specifier ID •

    $default  reduce using rule 8 (parameter_list)


State 82

   18 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD •

    $default  reduce using rule 18 (declaration_list)


State 83

   27 statement: IF LPAREN expression • RPAREN statement
   28          | IF LPAREN expression • RPAREN statement ELSE statement

    RPAREN  shift, and go to state 98


State 84

   26 statement: FOR LPAREN expression_statement • expression_statement expression RPAREN statement

    ID           shift, and go to state 31
    LPAREN       shift, and go to state 32
    SEMICOLON    shift, and go to state 34
    CONST_INT    shift, and go to state 35
    CONST_FLOAT  shift, and go to state 36
    ADDOP        shift, and go to state 40
    NOT          shift, and go to state 41

    expression_statement  go to state 99
    variable              go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    factor                go to state 55


State 85

   59 arguments: logic_expression •

    $default  reduce using rule 59 (arguments)


State 86

   50 factor: ID LPAREN argument_list • RPAREN

    RPAREN  shift, and go to state 100


State 87

   56 argument_list: arguments •
   58 arguments: arguments • COMMA logic_expression

    COMMA  shift, and go to state 101

    $default  reduce using rule 56 (argument_list)


State 88

   35 variable: ID LTHIRD expression • RTHIRD

    RTHIRD  shift, and go to state 102


State 89

   51 factor: LPAREN expression RPAREN •

    $default  reduce using rule 51 (factor)


State 90

   29 statement: WHILE LPAREN expression • RPAREN statement

    RPAREN  shift, and go to state 103


State 91

   30 statement: PRINTLN LPAREN ID • RPAREN SEMICOLON

    RPAREN  shift, and go to state 104


State 92

   31 statement: RETURN expression SEMICOLON •

    $default  reduce using rule 31 (statement)


State 93

   37 expression: variable ASSIGNOP logic_expression •

    $default  reduce using rule 37 (expression)


State 94

   39 logic_expression: rel_expression LOGICOP rel_expression •

    $default  reduce using rule 39 (logic_expression)


State 95

   41 rel_expression: simple_expression RELOP simple_expression •
   43 simple_expression: simple_expression • ADDOP term

    ADDOP  shift, and go to state 79

    $default  reduce using rule 41 (rel_expression)


State 96

   43 simple_expression: simple_expression ADDOP term •
   45 term: term • MULOP unary_expression

    MULOP  shift, and go to state 80

    $default  reduce using rule 43 (simple_expression)


State 97

   45 term: term MULOP unary_expression •

    $default  reduce using rule 45 (term)


State 98

   27 statement: IF LPAREN expression RPAREN • statement
   28          | IF LPAREN expression RPAREN • statement ELSE statement
